Colaboratory を使用して作成しました

--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "mathformula.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPi+TPyKn067/IwIbQ700tV",
+      "authorship_tag": "ABX9TyP8hF+j4PRzMn/GM1uqxLR3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2120,7 +2120,7 @@
           "height": 39
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2155,7 +2155,7 @@
           "height": 101
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2196,7 +2196,7 @@
           "height": 158
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2226,7 +2226,7 @@
           "height": 39
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2260,7 +2260,7 @@
           "height": 60
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2299,7 +2299,7 @@
           "height": 332
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2330,7 +2330,7 @@
           "height": 118
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2371,7 +2371,7 @@
           "height": 205
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2414,7 +2414,7 @@
           "height": 282
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2450,7 +2450,7 @@
           "height": 115
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2476,20 +2476,95 @@
     {
       "cell_type": "code",
       "source": [
-        "数列  \\{a_n\\},\\{b_n\\}  に対して,  \\lim_{n\\to\\infty}a_n=\\alpha ,  \\lim_{n\\to\\infty}b_n=\\beta  ならば、\n",
-        "# \\lim_{n\\to\\infty}ka_n=k\\alpha  ただし  k  は定数。\n",
-        "# \\lim_{n\\to\\infty}(a_n\\pm b_n)=\\alpha\\pm \\beta 　（複号同順）。\n",
-        "# \\lim_{n\\to\\infty}a_nb_n=\\alpha\\beta \n",
-        "# \\lim_{n\\to\\infty}\\frac{a_n}{b_n}=\\frac{\\alpha}{\\beta}  　（ただし、 \\beta\\not=0 ）。\n",
-        "数列  \\{r^n\\}  について、\n",
-        "# \\displaystyle |r|<1  ならば  \\lim_{n\\to\\infty}r^n=0 。\n",
-        "# r=1  ならば  \\lim_{n\\to\\infty}r^n=1 。\n",
-        "# \\displaystyle r > 1  ならば  \\lim_{n\\to\\infty}r^n=\\infty 。\n",
-        "# r  &le;  -1  ならば  \\lim_{n\\to\\infty}r^n  は存在しない。\n",
-        "\n",
+        "# 数列  \\{a_n\\},\\{b_n\\}  に対して,  \\lim_{n\\to\\infty}a_n=\\alpha ,  \\lim_{n\\to\\infty}b_n=\\beta  ならば、\n",
+        "%%latex\n",
+        "\\{a_n\\},\\{b_n\\}, \\lim_{n\\to\\infty}a_n=\\alpha ,  \\lim_{n\\to\\infty}b_n=\\beta \\\\\n",
+        "\\displaystyle\n",
+        "\\lim_{n\\to\\infty}ka_n=k\\alpha \\quad\\text{where}\\quad k \\text{ is a constant} \\\\\n",
+        "\\lim_{n\\to\\infty}(a_n\\pm b_n)=\\alpha\\pm \\beta \\\\\n",
+        "\\lim_{n\\to\\infty}a_nb_n=\\alpha\\beta \\\\[0.8em]\n",
+        "\\lim_{n\\to\\infty}\\frac{a_n}{b_n}=\\frac{\\alpha}{\\beta}  \\quad\\text{where}\\quad \\beta\\not=0"
+      ],
+      "metadata": {
+        "id": "NZ7SDKVAIB83",
+        "outputId": "95f1c9cf-d742-416f-f9d8-364eda8a1127",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 167
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\{a_n\\},\\{b_n\\}, \\lim_{n\\to\\infty}a_n=\\alpha ,  \\lim_{n\\to\\infty}b_n=\\beta \\\\\n\\displaystyle\n\\lim_{n\\to\\infty}ka_n=k\\alpha \\quad\\text{where}\\quad k \\text{ is a constant} \\\\\n\\lim_{n\\to\\infty}(a_n\\pm b_n)=\\alpha\\pm \\beta \\\\\n\\lim_{n\\to\\infty}a_nb_n=\\alpha\\beta \\\\[0.8em]\n\\lim_{n\\to\\infty}\\frac{a_n}{b_n}=\\frac{\\alpha}{\\beta}  \\quad\\text{where}\\quad \\beta\\not=0"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "&le;"
+      ],
+      "metadata": {
+        "id": "rOzu1E9Ep3hV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 数列\n",
+        "%%latex\n",
+        "\\{r^n\\}, \\quad \\displaystyle |r|<1 \\Longrightarrow \\lim_{n\\to\\infty}r^n=0 \\\\\n",
+        "r=1  \\Longrightarrow  \\lim_{n\\to\\infty}r^n=1 \\\\\n",
+        "r > 1  \\Longrightarrow  \\lim_{n\\to\\infty}r^n=\\infty \\\\\n",
+        "r  \\leqq  -1  \\Longrightarrow  \\not \\exist \\lim_{n\\to\\infty}r^n "
+      ],
+      "metadata": {
+        "id": "B5rgMRkem1n4",
+        "outputId": "bdcb093d-a69e-4703-ae98-cbacb12bf9fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 125
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\{r^n\\}, \\quad \\displaystyle |r|<1 \\Longrightarrow \\lim_{n\\to\\infty}r^n=0 \\\\\nr=1  \\Longrightarrow  \\lim_{n\\to\\infty}r^n=1 \\\\\nr > 1  \\Longrightarrow  \\lim_{n\\to\\infty}r^n=\\infty \\\\\nr  \\leqq  -1  \\Longrightarrow  \\not \\exist \\lim_{n\\to\\infty}r^n "
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "級数：  S_n=\\sum_{k=1}^{n-1}r^{k-1}  について、\n",
         "# |r|<1  のとき  \\lim_{n\\to\\infty}S_n=\\frac{1}{1-r} 。\n",
-        "# |r|  &ge;  1  のとき  \\lim_{n\\to\\infty}S_n  は発散する。\n",
+        "# |r|  &ge;  1  のとき  \\lim_{n\\to\\infty}S_n  は発散する"
+      ],
+      "metadata": {
+        "id": "k1jOtR3Zo5QF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
         "\n",
         "# 関数の極限\n",
         " \\lim_{x\\to a}f(x)=\\alpha ,  \\lim_{x\\to a}g(x)=\\beta のとき、\n",
@@ -2608,7 +2683,7 @@
         "\\ D(X) = \\sqrt{npq}\n"
       ],
       "metadata": {
-        "id": "NZ7SDKVAIB83"
+        "id": "JEPjRHy6qa9G"
       },
       "execution_count": null,
       "outputs": []
