--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -6,7 +6,7 @@
       "name": "mathformula.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPzM6BIADMRwH70gj9KbCrv",
+      "authorship_tag": "ABX9TyOahwBHjuxAZVBt4rZFmxIr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2701,7 +2701,7 @@
           "height": 424
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2710,6 +2710,50 @@
               "<IPython.core.display.Latex object>"
             ],
             "text/latex": "\\displaystyle\n\\prime=\\frac{d}{dx} \\\\[0.8em]\n(f+g)^\\prime=f^\\prime+g^\\prime \\\\[0.8em]\n(fg)^\\prime=f^\\prime g+fg^\\prime \\quad (\\text{Leibnitz rule}) \\\\[0.8em]\n\\left(\\frac{f}{g}\\right)^\\prime =\\frac{f^\\prime g - f g^\\prime}{g^2} \\quad(\\text{where} \\quad g \\ne 0) \\\\[0.8em]\n(f\\circ g)^\\prime = (f^\\prime \\circ g)\\cdot g^\\prime  \\\\[0.8em]\n\\frac{df(g(x))}{dx} = \\frac{df(g)}{dg}\\cdot \\frac{dg(x)}{dx} \\quad (\\text{chain rule}) \\\\[0.8em]\n\\left(f^{-1}\\right)^\\prime = \\frac{1}{f^\\prime \\circ f^{-1}} \\\\[0.8em]\ny=f\\left( x \\right) \\quad\\Longrightarrow\\quad x=f^{-1}\\left( y \\right) \\quad\\Longrightarrow\\quad \\frac{dx}{dy} = \\frac{1}{\\frac{dx}{dy}}\\\\[0.8em]\nx=x\\left( t \\right),\\quad y=y\\left( t \\right) \\quad\\Longrightarrow\\quad \\frac{dy}{dx}=\\frac{dy}{dt}/\\frac{dx}{dt} "
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 積分\n",
+        "# \\left|\\int_a^b f(x)\\,dx\\right| \\leq \\int_a^b |f(x)|dx  \n",
+        "# 置換積分\n",
+        "# \\int_a^b f(x(t))\\cdot \\frac{dx}{dt}\\,dt = \\int_{\\alpha}^{\\beta} f(x)\\,dx  \n",
+        "# ただし、t =  a ,  b  のとき、それぞれ  x  = &alpha;, &beta;。\n",
+        "# \\int_a^b f(x)g'(x)\\,dx = [f(x)g(x)]_a^b - \\int_a^b f'(x)g(x)\\,dx  \n",
+        "# ただし、 [h(x)]_a^b = h(b) - h(a)  と略記。\n",
+        "# 別の表現： \\int_a^b f(x)\\,dg(x) =  [f(x)g(x)]_a^b - \\int_a^b g(x)\\,df(x) \n",
+        "# \\left(\\int_a^b f(x)g(x)\\,dx\\right)^2 \\leq \\left(\\int_a^b f(x)^2\\,dx\\right)\\left(\\int_a^b g(x)^2\\,dx\\right)  　（コーシー・シュワルツの不等式）\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\left|\\int_a^b f(x)\\,dx\\right| \\leq \\int_a^b |f(x)|dx  \\\\[0.8em]\n",
+        "\\int_a^b f(x(t))\\cdot \\frac{dx}{dt}\\,dt = \\int_{\\alpha}^{\\beta} f(x)\\,dx  \\\\[0.8em]\n",
+        "\\quad\\text{where }\\quad t =  a ,  b  \\quad\\Longrightarrow\\quad  x  = \\alpha, \\beta \\\\[0.8em]\n",
+        "\\int_a^b f(x)g^\\prime (x)\\,dx = [f(x)g(x)]_a^b - \\int_a^b f^\\prime (x)g(x)\\,dx  \\\\[0.8em]\n",
+        "\\quad\\text{Simplified expression: }\\quad [h(x)]_a^b = h(b) - h(a) \\\\[0.8em]\n",
+        "\\quad\\text{Another expression: }\\quad \\int_a^b f(x)\\,dg(x) =  [f(x)g(x)]_a^b - \\int_a^b g(x)\\,df(x) \\\\[0.8em]\n",
+        "\\left(\\int_a^b f(x)g(x)\\,dx\\right)^2 \\leq \\left(\\int_a^b f(x)^2\\,dx\\right)\\left(\\int_a^b g(x)^2\\,dx\\right)  \\quad(\\text{Cauchy–Schwarz inequality})\n"
+      ],
+      "metadata": {
+        "id": "_zOsN_aqNDi3",
+        "outputId": "1f8f8b6a-c201-4de0-d40f-f615d5d29dd5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 375
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\left|\\int_a^b f(x)\\,dx\\right| \\leq \\int_a^b |f(x)|dx  \\\\[0.8em]\n\\int_a^b f(x(t))\\cdot \\frac{dx}{dt}\\,dt = \\int_{\\alpha}^{\\beta} f(x)\\,dx  \\\\[0.8em]\n\\quad\\text{where }\\quad t =  a ,  b  \\quad\\Longrightarrow\\quad  x  = \\alpha, \\beta \\\\[0.8em]\n\\int_a^b f(x)g^\\prime (x)\\,dx = [f(x)g(x)]_a^b - \\int_a^b f^\\prime (x)g(x)\\,dx  \\\\[0.8em]\n\\quad\\text{Simplified expression: }\\quad [h(x)]_a^b = h(b) - h(a) \\\\[0.8em]\n\\quad\\text{Another expression: }\\quad \\int_a^b f(x)\\,dg(x) =  [f(x)g(x)]_a^b - \\int_a^b g(x)\\,df(x) \\\\[0.8em]\n\\left(\\int_a^b f(x)g(x)\\,dx\\right)^2 \\leq \\left(\\int_a^b f(x)^2\\,dx\\right)\\left(\\int_a^b g(x)^2\\,dx\\right)  \\quad(\\text{Cauchy–Schwarz inequality})"
           },
           "metadata": {}
         }
@@ -2728,33 +2772,44 @@
     {
       "cell_type": "code",
       "source": [
-        "# 積分\n",
-        "# \\left|\\int_a^b f(x)\\,dx\\right| \\leq \\int_a^b |f(x)|dx  \n",
-        "# \\int_a^b f(x(t))\\cdot \\frac{dx}{dt}\\,dt = \\int_{\\alpha}^{\\beta} f(x)\\,dx  \n",
-        "# ただし、$t$ =  $a$ ,  $b$  のとき、それぞれ  $x$  = &alpha;, &beta;。\n",
-        "# \\int_a^b f(x)g'(x)\\,dx = [f(x)g(x)]_a^b - \\int_a^b f'(x)g(x)\\,dx  \n",
-        "# ただし、 [h(x)]_a^b = h(b) - h(a)  と略記。\n",
-        "# 別の表現： \\int_a^b f(x)\\,dg(x) =  [f(x)g(x)]_a^b - \\int_a^b g(x)\\,df(x) \n",
-        "# \\left(\\int_a^b f(x)g(x)\\,dx\\right)^2 \\leq \\left(\\int_a^b f(x)^2\\,dx\\right)\\left(\\int_a^b g(x)^2\\,dx\\right)  　（コーシー・シュワルツの不等式）\n",
+        "# 基本的な関数の微分公式・積分公式\n",
+        "# 実数  a  に対して\n",
+        "# \\left(x^a\\right)^\\prime =ax^{a-1}  　⇔　 \\int x^a\\,dx = \\frac{x^{a+1}}{a+1} + C  \\left({a\\neq{-1}}\\right) \n",
+        "# \\left(e^x\\right)'=e^x  　⇔　 \\int e^x\\,dx = e^x + C \n",
+        "# 従って、 \\left(a^x\\right)'=a^x \\log a  　⇔　 \\int a^x\\,dx = \\frac{a^x}{\\log a} + C \n",
+        "# (\\log x)'=\\frac{1}{x}  　⇔　 \\int \\frac{1}{x}dx = \\log \\left|{x}\\right| + C \n",
+        "# (\\log_a x)'=\\frac{1}{x\\log a}  \n",
+        "# (\\log \\left|f(x)\\right|)'=\\frac{f'(x)}{f(x)}  　⇔　 \\int \\frac{f'(x)}{f(x)}dx = \\log \\left|{f(x)}\\right| + C \n",
+        "# \\int \\log xdx = x\\log x - x + C \n",
+        "# \\left(\\sin x\\right)'=\\cos x  　⇔　 \\int \\cos xdx = \\sin x+ C \n",
+        "# \\left(\\cos x\\right)'=-\\sin x  　⇔　 \\int \\sin xdx =- \\cos x+ C \n",
+        "# \\left(\\tan x\\right)'=\\frac{1}{\\cos^2 x}  \n",
+        "# \\int \\tan xdx =- \\log \\left|\\cos x\\right| + C \n",
+        "# \\left( x^x \\right)'=x^x \\left( 1+\\log x\\right)  \n",
         "%%latex\n",
         "\\displaystyle\n",
-        "\\left|\\int_a^b f(x)\\,dx\\right| \\leq \\int_a^b |f(x)|dx  \\\\\n",
-        "% \\int_a^b f(x(t))\\cdot \\frac{dx}{dt}\\,dt = \\int_{\\alpha}^{\\beta} f(x)\\,dx  \\\\\n",
-        "% ただし、$t$ =  $a$ ,  $b$  のとき、それぞれ  $x$  = &alpha;, &beta;。\\\\\n",
-        "% \\int_a^b f(x)g'(x)\\,dx = [f(x)g(x)]_a^b - \\int_a^b f'(x)g(x)\\,dx  \\\\\n",
-        "% ただし、 [h(x)]_a^b = h(b) - h(a)  と略記。\\\\\n",
-        "% 別の表現： \\int_a^b f(x)\\,dg(x) =  [f(x)g(x)]_a^b - \\int_a^b g(x)\\,df(x) \\\\\n",
-        "% \\left(\\int_a^b f(x)g(x)\\,dx\\right)^2 \\leq \\left(\\int_a^b f(x)^2\\,dx\\right)\\left(\\int_a^b g(x)^2\\,dx\\right)  　（コーシー・シュワルツの不等式）\\\\\n"
+        "\\left(x^a\\right)^\\prime =ax^{a-1}  \\quad\\Longleftrightarrow\\quad \\int x^a\\,dx = \\frac{x^{a+1}}{a+1} + C  \\quad \\left({a\\neq{-1}}\\right) \\\\[0.8em]\n",
+        "\\left(e^x\\right)^\\prime =e^x  \\quad\\Longleftrightarrow\\quad \\int e^x\\,dx = e^x + C \\\\[0.8em]\n",
+        "% 従って、 \\left(a^x\\right)^\\prime =a^x \\log a  \\quad\\Longleftrightarrow\\quad \\int a^x\\,dx = \\frac{a^x}{\\log a} + C \\\\[0.8em]\n",
+        "% (\\log x)^\\prime =\\frac{1}{x}  \\quad\\Longleftrightarrow\\quad \\int \\frac{1}{x}dx = \\log \\left|{x}\\right| + C \\\\[0.8em]\n",
+        "% (\\log_a x)^\\prime =\\frac{1}{x\\log a}  \\\\[0.8em]\n",
+        "% (\\log \\left|f(x)\\right|)^\\prime =\\frac{f^\\prime (x)}{f(x)}  \\quad\\Longleftrightarrow\\quad \\int \\frac{f^\\prime (x)}{f(x)}dx = \\log \\left|{f(x)}\\right| + C \\\\[0.8em]\n",
+        "% \\int \\log xdx = x\\log x - x + C \\\\[0.8em]\n",
+        "% \\left(\\sin x\\right)^\\prime =\\cos x  \\quad\\Longleftrightarrow\\quad \\int \\cos xdx = \\sin x+ C \\\\[0.8em]\n",
+        "% \\left(\\cos x\\right)^\\prime =-\\sin x  \\quad\\Longleftrightarrow\\quad \\int \\sin xdx =- \\cos x+ C \\\\[0.8em]\n",
+        "% \\left(\\tan x\\right)^\\prime =\\frac{1}{\\cos^2 x}  \\\\[0.8em]\n",
+        "% \\int \\tan xdx =- \\log \\left|\\cos x\\right| + C \\\\[0.8em]\n",
+        "% \\left( x^x \\right)^\\prime =x^x \\left( 1+\\log x\\right)  \\\\[0.8em]"
       ],
       "metadata": {
-        "id": "_zOsN_aqNDi3",
-        "outputId": "104d34b3-3c61-4603-b662-f8c4b36284b1",
+        "id": "krkwY4EtJwNJ",
+        "outputId": "65cea052-9085-41a8-dd5a-9149e7404fae",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 122
         }
       },
-      "execution_count": 21,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2762,7 +2817,7 @@
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ],
-            "text/latex": "\\displaystyle\n\\left|\\int_a^b f(x)\\,dx\\right| \\leq \\int_a^b |f(x)|dx  \n% \\int_a^b f(x(t))\\cdot \\frac{dx}{dt}\\,dt = \\int_{\\alpha}^{\\beta} f(x)\\,dx  \n% ただし、$t$ =  $a$ ,  $b$  のとき、それぞれ  $x$  = &alpha;, &beta;。\n% \\int_a^b f(x)g'(x)\\,dx = [f(x)g(x)]_a^b - \\int_a^b f'(x)g(x)\\,dx  \n% ただし、 [h(x)]_a^b = h(b) - h(a)  と略記。\n% 別の表現： \\int_a^b f(x)\\,dg(x) =  [f(x)g(x)]_a^b - \\int_a^b g(x)\\,df(x) \n% \\left(\\int_a^b f(x)g(x)\\,dx\\right)^2 \\leq \\left(\\int_a^b f(x)^2\\,dx\\right)\\left(\\int_a^b g(x)^2\\,dx\\right)  　（コーシー・シュワルツの不等式）"
+            "text/latex": "\\displaystyle\n\\left(x^a\\right)^\\prime =ax^{a-1}  \\quad\\Longleftrightarrow\\quad \\int x^a\\,dx = \\frac{x^{a+1}}{a+1} + C  \\quad \\left({a\\neq{-1}}\\right) \\\\[0.8em]\n\\left(e^x\\right)^\\prime =e^x  \\quad\\Longleftrightarrow\\quad \\int e^x\\,dx = e^x + C \\\\[0.8em]\n% 従って、 \\left(a^x\\right)^\\prime =a^x \\log a  \\quad\\Longleftrightarrow\\quad \\int a^x\\,dx = \\frac{a^x}{\\log a} + C \\\\[0.8em]\n% (\\log x)^\\prime =\\frac{1}{x}  \\quad\\Longleftrightarrow\\quad \\int \\frac{1}{x}dx = \\log \\left|{x}\\right| + C \\\\[0.8em]\n% (\\log_a x)^\\prime =\\frac{1}{x\\log a}  \\\\[0.8em]\n% (\\log \\left|f(x)\\right|)^\\prime =\\frac{f^\\prime (x)}{f(x)}  \\quad\\Longleftrightarrow\\quad \\int \\frac{f^\\prime (x)}{f(x)}dx = \\log \\left|{f(x)}\\right| + C \\\\[0.8em]\n% \\int \\log xdx = x\\log x - x + C \\\\[0.8em]\n% \\left(\\sin x\\right)^\\prime =\\cos x  \\quad\\Longleftrightarrow\\quad \\int \\cos xdx = \\sin x+ C \\\\[0.8em]\n% \\left(\\cos x\\right)^\\prime =-\\sin x  \\quad\\Longleftrightarrow\\quad \\int \\sin xdx =- \\cos x+ C \\\\[0.8em]\n% \\left(\\tan x\\right)^\\prime =\\frac{1}{\\cos^2 x}  \\\\[0.8em]\n% \\int \\tan xdx =- \\log \\left|\\cos x\\right| + C \\\\[0.8em]\n% \\left( x^x \\right)^\\prime =x^x \\left( 1+\\log x\\right)  \\\\[0.8em]"
           },
           "metadata": {}
         }
@@ -2772,23 +2827,6 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "# 基本的な関数の微分公式・積分公式\n",
-        "実数  a  に対して\n",
-        "*  \\left(x^a\\right)'=ax^{a-1}  　⇔　 \\int x^a\\,dx = \\frac{x^{a+1}}{a+1} + C  \\left({a\\neq{-1}}\\right) \n",
-        "*  \\left(e^x\\right)'=e^x  　⇔　 \\int e^x\\,dx = e^x + C \n",
-        "*: 従って、 \\left(a^x\\right)'=a^x \\log a  　⇔　 \\int a^x\\,dx = \\frac{a^x}{\\log a} + C \n",
-        "*  (\\log x)'=\\frac{1}{x}  　⇔　 \\int \\frac{1}{x}dx = \\log \\left|{x}\\right| + C \n",
-        "*  (\\log_a x)'=\\frac{1}{x\\log a}  \n",
-        "*  (\\log \\left|f(x)\\right|)'=\\frac{f'(x)}{f(x)}  　⇔　 \\int \\frac{f'(x)}{f(x)}dx = \\log \\left|{f(x)}\\right| + C \n",
-        "\n",
-        "*　 \\int \\log xdx = x\\log x - x + C \n",
-        "\n",
-        "*  \\left(\\sin x\\right)'=\\cos x  　⇔　 \\int \\cos xdx = \\sin x+ C \n",
-        "*  \\left(\\cos x\\right)'=-\\sin x  　⇔　 \\int \\sin xdx =- \\cos x+ C \n",
-        "*  \\left(\\tan x\\right)'=\\frac{1}{\\cos^2 x}  \n",
-        "*  \\int \\tan xdx =- \\log \\left|\\cos x\\right| + C \n",
-        "\n",
-        "*  \\left( x^x \\right)'=x^x \\left( 1+\\log x\\right)  \n",
         "\n",
         "# 確率・統計\n",
         "# 順列・組合せ\n",
@@ -2846,7 +2884,7 @@
         "\\ D(X) = \\sqrt{npq}\n"
       ],
       "metadata": {
-        "id": "krkwY4EtJwNJ"
+        "id": "xT0xXojGoVgy"
       },
       "execution_count": null,
       "outputs": []
