Colaboratory を使用して作成しました

--- a/mathformula.ipynb
+++ b/mathformula.ipynb
@@ -6,7 +6,7 @@
       "name": "mathformula.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOahwBHjuxAZVBt4rZFmxIr",
+      "authorship_tag": "ABX9TyOsUU2J76SYgd8b7EeV/fg5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2745,7 +2745,7 @@
           "height": 375
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2754,6 +2754,48 @@
               "<IPython.core.display.Latex object>"
             ],
             "text/latex": "\\displaystyle\n\\left|\\int_a^b f(x)\\,dx\\right| \\leq \\int_a^b |f(x)|dx  \\\\[0.8em]\n\\int_a^b f(x(t))\\cdot \\frac{dx}{dt}\\,dt = \\int_{\\alpha}^{\\beta} f(x)\\,dx  \\\\[0.8em]\n\\quad\\text{where }\\quad t =  a ,  b  \\quad\\Longrightarrow\\quad  x  = \\alpha, \\beta \\\\[0.8em]\n\\int_a^b f(x)g^\\prime (x)\\,dx = [f(x)g(x)]_a^b - \\int_a^b f^\\prime (x)g(x)\\,dx  \\\\[0.8em]\n\\quad\\text{Simplified expression: }\\quad [h(x)]_a^b = h(b) - h(a) \\\\[0.8em]\n\\quad\\text{Another expression: }\\quad \\int_a^b f(x)\\,dg(x) =  [f(x)g(x)]_a^b - \\int_a^b g(x)\\,df(x) \\\\[0.8em]\n\\left(\\int_a^b f(x)g(x)\\,dx\\right)^2 \\leq \\left(\\int_a^b f(x)^2\\,dx\\right)\\left(\\int_a^b g(x)^2\\,dx\\right)  \\quad(\\text{Cauchy–Schwarz inequality})"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 基本的な関数の微分公式・積分公式\n",
+        "# 実数  a  に対して\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\left(x^a\\right)^\\prime =ax^{a-1}  \\quad\\Longleftrightarrow\\quad \\int x^a\\,dx = \\frac{x^{a+1}}{a+1} + C  \\quad \\left({a\\neq{-1}}\\right) \\\\[0.8em]\n",
+        "\\left(e^x\\right)^\\prime =e^x  \\quad\\Longleftrightarrow\\quad \\int e^x\\,dx = e^x + C \\\\[0.8em]\n",
+        "\\quad\\Longrightarrow\\quad \\left(a^x\\right)^\\prime =a^x \\log a  \\quad\\Longleftrightarrow\\quad \\int a^x\\,dx = \\frac{a^x}{\\log a} + C \\\\[0.8em]\n",
+        "(\\log x)^\\prime =\\frac{1}{x}  \\quad\\Longleftrightarrow\\quad \\int \\frac{1}{x}dx = \\log \\left|{x}\\right| + C \\\\[0.8em]\n",
+        "(\\log_a x)^\\prime =\\frac{1}{x\\log a}  \\\\[0.8em]\n",
+        "(\\log \\left|f(x)\\right|)^\\prime =\\frac{f^\\prime (x)}{f(x)}  \\quad\\Longleftrightarrow\\quad \\int \\frac{f^\\prime (x)}{f(x)}dx = \\log \\left|{f(x)}\\right| + C \\\\[0.8em]\n",
+        "\\int \\log xdx = x\\log x - x + C \\\\[0.8em]\n",
+        "\\left(\\sin x\\right)^\\prime =\\cos x  \\quad\\Longleftrightarrow\\quad \\int \\cos xdx = \\sin x+ C \\\\[0.8em]\n",
+        "\\left(\\cos x\\right)^\\prime =-\\sin x  \\quad\\Longleftrightarrow\\quad \\int \\sin xdx =- \\cos x+ C \\\\[0.8em]\n",
+        "\\left(\\tan x\\right)^\\prime =\\frac{1}{\\cos^2 x}  \\\\[0.8em]\n",
+        "\\int \\tan xdx =- \\log \\left|\\cos x\\right| + C \\\\[0.8em]\n",
+        "\\left( x^x \\right)^\\prime =x^x \\left( 1+\\log x\\right)  \\\\[0.8em]"
+      ],
+      "metadata": {
+        "id": "krkwY4EtJwNJ",
+        "outputId": "5ed2c4c1-fd50-4daf-a186-40617089ec5f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 617
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\left(x^a\\right)^\\prime =ax^{a-1}  \\quad\\Longleftrightarrow\\quad \\int x^a\\,dx = \\frac{x^{a+1}}{a+1} + C  \\quad \\left({a\\neq{-1}}\\right) \\\\[0.8em]\n\\left(e^x\\right)^\\prime =e^x  \\quad\\Longleftrightarrow\\quad \\int e^x\\,dx = e^x + C \\\\[0.8em]\n\\quad\\Longrightarrow\\quad \\left(a^x\\right)^\\prime =a^x \\log a  \\quad\\Longleftrightarrow\\quad \\int a^x\\,dx = \\frac{a^x}{\\log a} + C \\\\[0.8em]\n(\\log x)^\\prime =\\frac{1}{x}  \\quad\\Longleftrightarrow\\quad \\int \\frac{1}{x}dx = \\log \\left|{x}\\right| + C \\\\[0.8em]\n(\\log_a x)^\\prime =\\frac{1}{x\\log a}  \\\\[0.8em]\n(\\log \\left|f(x)\\right|)^\\prime =\\frac{f^\\prime (x)}{f(x)}  \\quad\\Longleftrightarrow\\quad \\int \\frac{f^\\prime (x)}{f(x)}dx = \\log \\left|{f(x)}\\right| + C \\\\[0.8em]\n\\int \\log xdx = x\\log x - x + C \\\\[0.8em]\n\\left(\\sin x\\right)^\\prime =\\cos x  \\quad\\Longleftrightarrow\\quad \\int \\cos xdx = \\sin x+ C \\\\[0.8em]\n\\left(\\cos x\\right)^\\prime =-\\sin x  \\quad\\Longleftrightarrow\\quad \\int \\sin xdx =- \\cos x+ C \\\\[0.8em]\n\\left(\\tan x\\right)^\\prime =\\frac{1}{\\cos^2 x}  \\\\[0.8em]\n\\int \\tan xdx =- \\log \\left|\\cos x\\right| + C \\\\[0.8em]\n\\left( x^x \\right)^\\prime =x^x \\left( 1+\\log x\\right)  \\\\[0.8em]"
           },
           "metadata": {}
         }
@@ -2772,62 +2814,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# 基本的な関数の微分公式・積分公式\n",
-        "# 実数  a  に対して\n",
-        "# \\left(x^a\\right)^\\prime =ax^{a-1}  　⇔　 \\int x^a\\,dx = \\frac{x^{a+1}}{a+1} + C  \\left({a\\neq{-1}}\\right) \n",
-        "# \\left(e^x\\right)'=e^x  　⇔　 \\int e^x\\,dx = e^x + C \n",
-        "# 従って、 \\left(a^x\\right)'=a^x \\log a  　⇔　 \\int a^x\\,dx = \\frac{a^x}{\\log a} + C \n",
-        "# (\\log x)'=\\frac{1}{x}  　⇔　 \\int \\frac{1}{x}dx = \\log \\left|{x}\\right| + C \n",
-        "# (\\log_a x)'=\\frac{1}{x\\log a}  \n",
-        "# (\\log \\left|f(x)\\right|)'=\\frac{f'(x)}{f(x)}  　⇔　 \\int \\frac{f'(x)}{f(x)}dx = \\log \\left|{f(x)}\\right| + C \n",
-        "# \\int \\log xdx = x\\log x - x + C \n",
-        "# \\left(\\sin x\\right)'=\\cos x  　⇔　 \\int \\cos xdx = \\sin x+ C \n",
-        "# \\left(\\cos x\\right)'=-\\sin x  　⇔　 \\int \\sin xdx =- \\cos x+ C \n",
-        "# \\left(\\tan x\\right)'=\\frac{1}{\\cos^2 x}  \n",
-        "# \\int \\tan xdx =- \\log \\left|\\cos x\\right| + C \n",
-        "# \\left( x^x \\right)'=x^x \\left( 1+\\log x\\right)  \n",
-        "%%latex\n",
-        "\\displaystyle\n",
-        "\\left(x^a\\right)^\\prime =ax^{a-1}  \\quad\\Longleftrightarrow\\quad \\int x^a\\,dx = \\frac{x^{a+1}}{a+1} + C  \\quad \\left({a\\neq{-1}}\\right) \\\\[0.8em]\n",
-        "\\left(e^x\\right)^\\prime =e^x  \\quad\\Longleftrightarrow\\quad \\int e^x\\,dx = e^x + C \\\\[0.8em]\n",
-        "% 従って、 \\left(a^x\\right)^\\prime =a^x \\log a  \\quad\\Longleftrightarrow\\quad \\int a^x\\,dx = \\frac{a^x}{\\log a} + C \\\\[0.8em]\n",
-        "% (\\log x)^\\prime =\\frac{1}{x}  \\quad\\Longleftrightarrow\\quad \\int \\frac{1}{x}dx = \\log \\left|{x}\\right| + C \\\\[0.8em]\n",
-        "% (\\log_a x)^\\prime =\\frac{1}{x\\log a}  \\\\[0.8em]\n",
-        "% (\\log \\left|f(x)\\right|)^\\prime =\\frac{f^\\prime (x)}{f(x)}  \\quad\\Longleftrightarrow\\quad \\int \\frac{f^\\prime (x)}{f(x)}dx = \\log \\left|{f(x)}\\right| + C \\\\[0.8em]\n",
-        "% \\int \\log xdx = x\\log x - x + C \\\\[0.8em]\n",
-        "% \\left(\\sin x\\right)^\\prime =\\cos x  \\quad\\Longleftrightarrow\\quad \\int \\cos xdx = \\sin x+ C \\\\[0.8em]\n",
-        "% \\left(\\cos x\\right)^\\prime =-\\sin x  \\quad\\Longleftrightarrow\\quad \\int \\sin xdx =- \\cos x+ C \\\\[0.8em]\n",
-        "% \\left(\\tan x\\right)^\\prime =\\frac{1}{\\cos^2 x}  \\\\[0.8em]\n",
-        "% \\int \\tan xdx =- \\log \\left|\\cos x\\right| + C \\\\[0.8em]\n",
-        "% \\left( x^x \\right)^\\prime =x^x \\left( 1+\\log x\\right)  \\\\[0.8em]"
-      ],
-      "metadata": {
-        "id": "krkwY4EtJwNJ",
-        "outputId": "65cea052-9085-41a8-dd5a-9149e7404fae",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 122
-        }
-      },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ],
-            "text/latex": "\\displaystyle\n\\left(x^a\\right)^\\prime =ax^{a-1}  \\quad\\Longleftrightarrow\\quad \\int x^a\\,dx = \\frac{x^{a+1}}{a+1} + C  \\quad \\left({a\\neq{-1}}\\right) \\\\[0.8em]\n\\left(e^x\\right)^\\prime =e^x  \\quad\\Longleftrightarrow\\quad \\int e^x\\,dx = e^x + C \\\\[0.8em]\n% 従って、 \\left(a^x\\right)^\\prime =a^x \\log a  \\quad\\Longleftrightarrow\\quad \\int a^x\\,dx = \\frac{a^x}{\\log a} + C \\\\[0.8em]\n% (\\log x)^\\prime =\\frac{1}{x}  \\quad\\Longleftrightarrow\\quad \\int \\frac{1}{x}dx = \\log \\left|{x}\\right| + C \\\\[0.8em]\n% (\\log_a x)^\\prime =\\frac{1}{x\\log a}  \\\\[0.8em]\n% (\\log \\left|f(x)\\right|)^\\prime =\\frac{f^\\prime (x)}{f(x)}  \\quad\\Longleftrightarrow\\quad \\int \\frac{f^\\prime (x)}{f(x)}dx = \\log \\left|{f(x)}\\right| + C \\\\[0.8em]\n% \\int \\log xdx = x\\log x - x + C \\\\[0.8em]\n% \\left(\\sin x\\right)^\\prime =\\cos x  \\quad\\Longleftrightarrow\\quad \\int \\cos xdx = \\sin x+ C \\\\[0.8em]\n% \\left(\\cos x\\right)^\\prime =-\\sin x  \\quad\\Longleftrightarrow\\quad \\int \\sin xdx =- \\cos x+ C \\\\[0.8em]\n% \\left(\\tan x\\right)^\\prime =\\frac{1}{\\cos^2 x}  \\\\[0.8em]\n% \\int \\tan xdx =- \\log \\left|\\cos x\\right| + C \\\\[0.8em]\n% \\left( x^x \\right)^\\prime =x^x \\left( 1+\\log x\\right)  \\\\[0.8em]"
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "\n",
         "# 確率・統計\n",
         "# 順列・組合せ\n",
         "* 異なる$n$個から $r$ 個を取る順列：\n",
