Colaboratory を使用して作成しました

--- a/matha02case_probability.ipynb
+++ b/matha02case_probability.ipynb
@@ -6,7 +6,7 @@
       "name": "matha02case_probability.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO4tNMdV/q+ZkEtM4qM1sCO",
+      "authorship_tag": "ABX9TyMebP37BtrUN48yCPlQZJhM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,14 +92,32 @@
         "using namespace std;\n",
         "int main () {\n",
         "    const int N = 100;\n",
-        "    for (i)\n",
-        "}\n"
+        "    int cnt = 0;\n",
+        "    for (int i = 1; i <= N; i++) {\n",
+        "        if (i % 2 == 0) cnt++;\n",
+        "        else if (i % 3 == 0) cnt++;\n",
+        "        else continue;\n",
+        "    }\n",
+        "    cout << cnt << endl;\n",
+        "}"
       ],
       "metadata": {
-        "id": "x3iVxsmoY3Ag"
+        "id": "x3iVxsmoY3Ag",
+        "outputId": "341fead5-a4cd-42ee-8a20-9e288920b48e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -107,10 +125,22 @@
         "!g++ temp.cpp; echo  |./a.out"
       ],
       "metadata": {
-        "id": "RcZfNurSZDH6"
+        "id": "RcZfNurSZDH6",
+        "outputId": "e9869e5a-24fc-483c-e9f5-9a10a8c5667a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "67\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -120,15 +150,11 @@
       },
       "outputs": [],
       "source": [
+        "3 つの有限集合の和集合の要素の個数については、次の公式が成り立つ\n",
+        "n(A∪B∪C) ＝ n(A) ＋ n(B) ＋ n(C) − n(A∩B) − n(B∩C) − n(C∩A) ＋ n(A∩B∩C)\n",
+        "問題 上の公式を証明せよ\n",
         "\n",
-        "発展: 3つの集合の和集合の要素の個数\n",
-        "Venn diagram of 3 sets.svg\n",
-        "3つの有限集合の和集合の要素の個数については、次の公式が成り立つ\n",
         "\n",
-        "n(A∪B∪C) ＝ n(A) ＋ n(B) ＋ n(C) −n(A∩B) −n(B∩C) −n(C∩A) ＋ n(A∩B∩C)\n",
-        "\n",
-        "問題\n",
-        "右の図を参考に、上の公式を証明せよ。\n",
         "\n",
         "\n",
         "例題\n",
