Colaboratory を使用して作成しました

--- a/haskell_lipovaca.ipynb
+++ b/haskell_lipovaca.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_lipovaca.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOgeTZdVWJeS5InlpcK0Z1E",
+      "authorship_tag": "ABX9TyNiqrCx3xtMGB03aKGjjVjw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "u8BK7s-v9R6o"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
         },
         "outputId": "dfa4f79a-14ae-4456-948f-9887d3ae36bb"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +93,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +116,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "attributes": {
           "classes": [
@@ -223,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "attributes": {
           "classes": [
@@ -254,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "attributes": {
           "classes": [
@@ -285,7 +285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "attributes": {
           "classes": [
@@ -316,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "attributes": {
           "classes": [
@@ -347,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "attributes": {
           "classes": [
@@ -378,7 +378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "attributes": {
           "classes": [
@@ -418,7 +418,7 @@
       "metadata": {
         "id": "usrAOlpHDtJM"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -433,7 +433,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +456,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2272,6 +2272,15 @@
         "transformations to those solutions and filter them until you get the\n",
         "right ones."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# EOF"
+      ],
+      "metadata": {
+        "id": "tgZTm3Lvmuui"
+      }
     }
   ]
 }
