Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "learnhaskell.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMy48Eaq7r/okePPw9O6sIM",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMDhPk7LsNCo91u/qTjpGSr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +44,7 @@
         "%%capture\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -120,7 +121,6 @@
       },
       "source": [
         "# ファイルを実行する\n",
-        "# ファイルを作るセルと、実行するセルの両方を選択して、Ctrl+Shift+Enter が便利かも\n",
         "!runghc temp.hs"
       ],
       "execution_count": null,
