Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOMhwdELyjlCMtZ4QB0Cavb",
+      "authorship_tag": "ABX9TyMr3PWru/hZ3WIsQ67dnhwn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "%%capture\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 17,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1401,8 +1401,9 @@
         }
       },
       "source": [
-        "# 実験 アプリカティブとかファンクターとか\n",
+        "# 実験 モナド、アプリカティブ、ファンクターとか\n",
         "# 今はわからないのでとりあえず少し実験して先へ進む\n",
+        "# とりあえず =<< と >>= がモナドだと覚えよう\n",
         "!ghc -e ':t (<*>)' # Applicative\n",
         "!ghc -e ':t (<$>)' # functor\n",
         "!ghc -e ':k Applicative'\n",
@@ -1464,15 +1465,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "m5uGCv6t4ovO"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "i0HK2HFzVMOP"
@@ -1487,19 +1479,86 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "LMNeEUkYg52W"
-      },
+      "cell_type": "code",
       "source": [
-        "---\n",
-        "入力を最終的にリストで受取る\n",
-        "\n",
-        "!echo -e '10 20\\n30 40\\n50 60' \n",
-        "\n",
-        "を\n",
-        "\n",
-        " [[10,20],[30,40],[50,60]]で受け取りたい"
+        "!echo -e '10 20\\n30 40\\n50 60'"
+      ],
+      "metadata": {
+        "id": "ZXyiYLq46BfW",
+        "outputId": "cd6baff1-9a34-4493-cddd-361bec4f5a03",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 20\n",
+            "30 40\n",
+            "50 60\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 入力を最終的に数値のリストのリストで受取る\n",
+        "# 入力 !echo -e '10 20\\n30 40\\n50 60' => \"10 20\\n30 40\\n50 60\\n\" 文字列\n",
+        "# 出力  [[10,20],[30,40],[50,60]]\n",
+        "!echo -e '10 20\\n30 40\\n50 60' | ghc -e 'map (map (read::String -> Int).words).lines <$> getContents'\n",
+        "!echo -e '10 20\\n30 40\\n50 60' | ghc -e 'getContents >>= print . map (map (read::String -> Int) . words) . lines'"
+      ],
+      "metadata": {
+        "id": "LMNeEUkYg52W",
+        "outputId": "769be3c0-e318-4982-846c-17bf77430330",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[10,20],[30,40],[50,60]]\n",
+            "[[10,20],[30,40],[50,60]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 解説\n",
+        "# echo -e で改行を含む入力を作っている\n",
+        "# getContents で受け取るが getContents >>= として冒頭に書いても良い\n",
+        "# ドット、ピリオドで関数を繋いでいくのをポイントフリースタイルと呼ぶ\n",
+        "# map が入れ子になっているのはリストが入れ子になっているため\n",
+        "# <$> functor を使った例では print がない、入れるとエラーになる\n",
+        "# >>= monad を使った例では print が必要、ないとエラーになる\n",
+        "# 今はわからないので覚えておこう"
+      ],
+      "metadata": {
+        "id": "euQO8E2b7q8V",
+        "outputId": "2ebec338-490e-4640-d33e-48b0b393527b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[10,20],[30,40],[50,60]]\n"
+          ]
+        }
       ]
     },
     {
@@ -1512,7 +1571,7 @@
         }
       },
       "source": [
-        "# getContents で全体を取得\n",
+        "# getContents は全体を取得する\n",
         "!echo -e '10 20\\n30 40\\n50 60' | ghc -e 'getContents'"
       ],
       "execution_count": null,
@@ -1536,8 +1595,8 @@
         }
       },
       "source": [
-        "# <- で IO String から String に変換する\n",
-        "# lines で行に分割\n",
+        "# <- は IO String から String に変換する\n",
+        "# lines で行に分割できる\n",
         "!echo -e '10 20\\n30 40\\n50 60' | ghc -e 'do {input <- getContents; let strList = lines(input) in print strList}'"
       ],
       "execution_count": null,
@@ -1612,7 +1671,7 @@
         }
       },
       "source": [
-        "# ファンクターを使うと直接 lines を getContents に働かせる\n",
+        "# ファンクターを使うと直接 lines を getContents に働かすことができる\n",
         "!echo -e '10 20\\n30 40\\n50 60' | ghc -e 'lines <$> getContents'\n",
         "!ghc -e ':t (<$>)'"
       ],
@@ -1657,7 +1716,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "mbTWEw-KjvxO",
-        "outputId": "6fe62d48-b27d-4319-87e4-ec25480f73f0",
+        "outputId": "4e3df9f4-1471-4082-da69-5412169de4ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1670,7 +1729,7 @@
         "!echo \n",
         "!echo -e '10 20\\n30 40\\n50 60' | ghc -e 'getContents >>= print . map (map (read::String -> Int) . words) . lines'"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1680,6 +1739,7 @@
             "\n",
             "[[10,20],[30,40],[50,60]]\n",
             "\n",
+            "[[10,20],[30,40],[50,60]]\n",
             "[[10,20],[30,40],[50,60]]\n"
           ]
         }
@@ -1696,6 +1756,8 @@
       },
       "source": [
         "# 入力が !echo -e '3\\n10 20\\n30 40\\n50 60' のようにデータ数が冒頭にある場合\n",
+        "# drop する必要がある\n",
+        "# tail の方が自然か\n",
         "!echo -e '3\\n10 20\\n30 40\\n50 60' | ghc -e 'getContents >>=  print . map (map (read::String -> Int) . words).(drop 1).lines'\n",
         "!echo\n",
         "!echo -e '3\\n10 20\\n30 40\\n50 60' | ghc -e 'getContents >>=  print.map(map(read::String -> Int).words).tail.lines'"
@@ -1761,6 +1823,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "IYP_sglECB1i"
+      }
     },
     {
       "cell_type": "code",
