Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPq+160IVRgfx0dovI2ZqG8",
+      "authorship_tag": "ABX9TyNreY6kbCeBZQ5ixXbn896t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "%%capture\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 1,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1853,15 +1853,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "IYP_sglECB1i"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "TWIfDATTBnVf",
@@ -1874,7 +1865,7 @@
         "# 結果を一つずつ改行して出力する\n",
         "!echo -e '3\\n10 20\\n30 40\\n50 60' | ghc -e 'getContents >>= mapM_ print.map(sum.map read.words).tail.lines'"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1903,7 +1894,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2277,15 +2268,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "mhKYA7jNJWSk"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "DKODrRuq-gbE",
@@ -2311,25 +2293,59 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NgXPOOkv_PBR"
+        "id": "NgXPOOkv_PBR",
+        "outputId": "24fb0e88-a716-454d-9af2-aa527909f141",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "!ghc -e $'pi'\n",
-        "!ghc -e $'exp(1)'"
+        "!ghc -e 'pi'\n",
+        "!ghc -e 'exp(1)'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.141592653589793\n",
+            "2.718281828459045\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "mhKYA7jNJWSk"
+      }
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UMpvvcWQerfM"
+        "id": "UMpvvcWQerfM",
+        "outputId": "d30ad2e6-ad97-4b87-c25b-b7bdaa47cb72",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!ghc -e \"sin(pi/2)\""
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2349,18 +2365,6 @@
       },
       "source": [
         "!ghc -e 'replicate 5 \"hello\"'"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0DyTBh1cs5wg"
-      },
-      "source": [
-        "%%capture\n",
-        "!apt install haskell-platform"
       ],
       "execution_count": null,
       "outputs": []
