--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMWfeG7+1hyijDSKTumPbxV",
+      "authorship_tag": "ABX9TyN0wFCFoKoSoYIXY3RUbdQS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "%%capture\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 1,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -2327,7 +2327,7 @@
       "source": [
         "!ghc -e \"sin(pi/2)\""
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2350,7 +2350,7 @@
       "source": [
         "!ghc -e \"[sin (n * pi/8) | n <- [0..4]]\""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2373,7 +2373,7 @@
       "source": [
         "!ghc -e 'replicate 5 \"hello\"'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2398,7 +2398,7 @@
         "!ghc -e 'replicate 5 [5]'\n",
         "!ghc -e \"replicate 5 'x'\""
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2425,7 +2425,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2451,7 +2451,7 @@
         "!ghc -e '5::Int'\n",
         "!ghc -e '5::Double'"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2477,7 +2477,7 @@
         "!ghc -e \":t 'X'\"\n",
         "!ghc -e ':t \"hello haskell\"' # String ではなく [Char]"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2512,7 +2512,7 @@
         "!echo -e $'hel\\tlo\\nhello'\n",
         "!echo -e \"hel\\tlo\\nhello\""
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2559,7 +2559,7 @@
         "!ghc -e ':t 42.0'\n",
         "!ghc -e ':t gcd 15 20'"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2613,7 +2613,7 @@
         "# 3. case文の中で、場合分けの結果を表示する\n",
         "# 4. 関数定義で、引数と引数の間、引数と返り値の間を示す。"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2645,7 +2645,7 @@
       "source": [
         "!ghc -e ':t print'"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2670,7 +2670,7 @@
         "!ghc -e ':t (=<<)'\n",
         "!ghc -e ':t (->)'"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2698,7 +2698,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2730,7 +2730,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2778,7 +2778,7 @@
         "!ghc -e '(1, True)'\n",
         "!ghc -e \"zip [1 .. 5] ['a' .. 'e']\""
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2792,68 +2792,90 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "mhKYA7jNJWSk"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "OwVPfQoDAEXJ"
+        "id": "QnhmYQLP3KFy",
+        "outputId": "d05b9245-16b9-4c45-acab-f59e18c173b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "!ghc -e $':t (..)'"
+        "!ghc -e \":t ['a' .. 'c']\"\n",
+        "!ghc -e \":t [('x', True), ('y', False)]\""
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['a' .. 'c'] :: [Char]\n",
+            "[('x', True), ('y', False)] :: [(Char, Bool)]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QnhmYQLP3KFy"
-      },
-      "source": [
-        "!ghc -e $':t [\\'a\\' .. \\'c\\']'\n",
-        "!ghc -e $':t [(\\'x\\', True), (\\'y\\', False)]'"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yArbCM1L3L1Q"
+        "id": "yArbCM1L3L1Q",
+        "outputId": "55ce0fcf-59e6-4a41-bee6-e1ca468d64cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!ghc -e 'fst (1, 2)'\n",
         "!ghc -e 'snd (1, 2)'\n",
         "!ghc -e 'map fst [(1, 2), (3, 4), (5, 6)]'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "[1,3,5]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G9tnRyO_G5sT"
+        "id": "G9tnRyO_G5sT",
+        "outputId": "0002148d-128d-4ff7-8e2e-3cc1a2ed2b2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!ghc -e '[1..10]'\n",
-        "!ghc -e '[1..3]::[5..10]'\n",
-        "!ghc -e '[3, 5..10]'\n",
-        "!ghc -e '[1..3, 5..10]'"
+        "!ghc -e '[3, 5..10]'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1,2,3,4,5,6,7,8,9,10]\n",
+            "[3,5,7,9]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SYMjyxkeH0Tz"
+        "id": "SYMjyxkeH0Tz",
+        "outputId": "6b40366c-d3b7-40fe-852a-07d39ec79d83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# リスト内包表記\n",
@@ -2862,8 +2884,19 @@
         "# mapM_ による1行ごとの出力\n",
         "!ghc -e 'mapM_ print [1..3]'\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1,4,9,16,25,36,49,64,81,100]\n",
+            "1\n",
+            "2\n",
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2873,143 +2906,147 @@
       "source": [
         "# リスト内包表記との組み合わせ\n",
         "!ghc -e 'mapM_ print [x^2 | x <- [1..3]]'\n",
-        "!ghc -e 'let list = [x^2 | x <- [1..3]] in  mapM_ print list'\n"
+        "!ghc -e 'let list = [x^2 | x <- [1..3]] in  mapM_ print list'"
       ],
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "o5zW6xLTLDWC"
-      },
-      "source": [
-        "# getContents"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "0d0wmUdFrlbL"
+        "id": "0d0wmUdFrlbL",
+        "outputId": "c78666b3-492d-44eb-9d61-28515a8d8e3e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# getContents\n",
         "!echo -e 'This is a pen.\\nThat is an apple.'\n",
         "!echo -e 'This is a pen.\\nThat is an apple.' | ghc -e 'getLine'\n",
         "!echo -e 'This is a pen.\\nThat is an apple.' | ghc -e 'getContents'\n",
-        "!echo -e 'This is a pen.\\nThat is an apple.' | ghc -e 'lines <$> getContents'\n",
-        "!echo\n",
-        "# 実験 getContents から lines にしたあとの処理\n",
-        "!echo -e '288 240' | ghc -e 'map ((\\[x, y] -> gcd (read x) (read y)) . words) . lines <$> getContents'\n",
-        "!echo -e '288 240' | ghc -e 'map words . lines <$> getContents'\n",
-        "!echo -e '288 240' | ghc -e 'map ((\\[x, y] -> gcd (read x) (read y)) . words) . lines <$> getContents'\n",
-        "!ghc -e 'gcd 24 81'\n",
-        "!echo -e '288 240' | ghc -e 'map ((\\[x, y] -> gcd 100 (read x)) . words) . lines <$> getContents'\n",
-        "!echo\n",
-        "!echo -e 'This is a pen.\\nThat is an apple.' | ghc -e 'map ( words) . lines <$> getContents'\n",
-        "!echo -e 'This is a pen.\\nThat is an apple.' | ghc -e 'map (length) . lines <$> getContents'\n",
-        "!ghc -e 'length([\"This\",\"is\",\"a\",\"pen.\"])'\n",
-        "!ghc -e 'map length [\"This\",\"is\",\"a\",\"pen.\"]'\n",
-        "\n",
-        "\n"
+        "!echo -e 'This is a pen.\\nThat is an apple.' | ghc -e 'lines <$> getContents'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is a pen.\n",
+            "That is an apple.\n",
+            "\"This is a pen.\"\n",
+            "\"This is a pen.\\nThat is an apple.\\n\"\n",
+            "[\"This is a pen.\",\"That is an apple.\"]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "1nqetsIyC19O"
-      },
       "source": [
-        "!echo -e 'This is a pen.\\nThat is an apple.' | ghc -e 'getContents >>= mapM_ putStrLn . lines'"
+        "# 実験 getContents から lines にしたあとの処理\n",
+        "!echo -e '288 240' | ghc -e 'map ((\\[x, y] -> gcd (read x) (read y)) . words) . lines <$> getContents'\n",
+        "!echo -e '288 240' | ghc -e 'map words . lines <$> getContents'\n",
+        "!echo -e 'This is a pen.\\nThat is an apple.' | ghc -e 'map (words) . lines <$> getContents'\n",
+        "!echo -e 'This is a pen.\\nThat is an apple.' | ghc -e 'map (length) . lines <$> getContents'\n",
+        "!ghc -e 'length([\"This\",\"is\",\"a\",\"pen.\"])'\n",
+        "!ghc -e 'map length [\"This\",\"is\",\"a\",\"pen.\"]'"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
-        "id": "UOWi2Qe_5KxD"
+        "id": "cPQSG2pPZ_c1",
+        "outputId": "745c1704-4367-4331-a418-83433e608cc6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "source": [
-        "# 関数定義"
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[48]\n",
+            "[[\"288\",\"240\"]]\n",
+            "[48]\n",
+            "3\n",
+            "[4]\n",
+            "\n",
+            "[[\"This\",\"is\",\"a\",\"pen.\"],[\"That\",\"is\",\"an\",\"apple.\"]]\n",
+            "[14,17]\n",
+            "4\n",
+            "[4,2,1,4]\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BEE6hOyJ5NQR"
+        "id": "1nqetsIyC19O",
+        "outputId": "b413633f-d371-4699-87e9-0d4134c10f7f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "!echo -e 'This is a pen.\\nThat is an apple.' | ghc -e 'getContents >>= mapM_ putStrLn . lines'"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is a pen.\n",
+            "That is an apple.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 関数定義\n",
         "%%writefile temp.hs\n",
-        "module Main where\n",
-        "\n",
         "factorial n = if n == 0 then 1 else n * factorial (n - 1)\n",
-        "\n",
         "main = do putStrLn \"What is 5! ?\"\n",
         "          x <- readLn\n",
         "          if x == factorial 5\n",
         "              then putStrLn \"You're right!\"\n",
         "              else putStrLn \"You're wrong!\""
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "metadata": {
-        "id": "5uBBmlwM5WJZ"
+        "id": "UOWi2Qe_5KxD"
       },
-      "source": [
-        "# コンパイルして実行すると、入力待ちになる。出力欄をクリックして入力ウィンドウに入力することができる。\n",
-        "!ghc --make temp.hs; ./Test"
-      ],
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YTEAzvR9nTp8"
-      },
-      "source": [
-        "%%writefile temp.hs\n",
-        "\n",
-        "factorial n = if n == 0 then 1 else n * factorial (n - 1)\n",
-        "\n",
-        "main = do putStrLn \"What is 5! ?\"\n",
-        "          x <- readLn\n",
-        "          if x == factorial 5\n",
-        "              then putStrLn \"You're right!\"\n",
-        "              else putStrLn \"You're wrong!\""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jAVkoqgvnu0-"
+        "id": "jAVkoqgvnu0-",
+        "outputId": "778f439a-7447-4803-cd7b-8b31af9122d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!echo 120 | runghc temp.hs\n",
         "!echo 150 | runghc temp.hs"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "H-u9V2fHds36"
-      },
-      "source": [
-        "上のように、echo を使って、プログラムの readLn で受けるか。\n",
-        "\n",
-        "次のように、プログラム内に渡すデータを書いて、結果を出力するか。\n",
-        "\n",
-        "このどちらかになると思う。"
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is 5! ?\n",
+            "You're right!\n",
+            "What is 5! ?\n",
+            "You're wrong!\n"
+          ]
+        }
       ]
     },
     {
@@ -3041,18 +3078,13 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ksOskHSJd4p1"
-      },
-      "source": [
-        "パターンマッチングを利用して次のように書く書き方もある。"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "ajXsLOal5uxz"
+        "id": "ajXsLOal5uxz",
+        "outputId": "bc60300e-b610-4d35-aab4-31473edd732f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile temp.hs\n",
@@ -3067,27 +3099,39 @@
         "x = 6\n",
         "y = 5"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.hs\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PCiTutabrJL1"
+        "id": "PCiTutabrJL1",
+        "outputId": "f7bd2e5d-ea98-4cda-b1bd-96aa5a1b19f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!runghc temp.hs"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "12WQ1L4CwK6G"
-      },
-      "source": [
-        "ちなみに、Colab では 複数のセルを選択して、 Ctrl+Shift+Enter すると、便利である。"
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "720\n",
+            "120\n"
+          ]
+        }
       ]
     },
     {
@@ -3121,18 +3165,13 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "M67kE5oy6ZKp"
-      },
-      "source": [
-        "上コードセルで、let , in は一時的な名前を定義している。\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "XN5488-c6Xtm"
+        "id": "XN5488-c6Xtm",
+        "outputId": "dd405c31-9a9e-471a-f3a0-f984a6f8c4f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile temp.hs\n",
@@ -3145,28 +3184,49 @@
         "        putStrLn (classify 0)                           \n",
         "        putStrLn (classify 69)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.hs\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZzkYe9drhp7a"
+        "id": "ZzkYe9drhp7a",
+        "outputId": "c6f1ef59-4ad4-4b59-c7b5-fb58fb02242a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!runghc temp.hs"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "newborn\n",
+            "senior citizen\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "cp5ZgVAk68_H"
-      },
       "source": [
-        "上のセルで、case 式を使っている。 `_` はその他すべてを表す。"
-      ]
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "mhKYA7jNJWSk"
+      }
     },
     {
       "cell_type": "markdown",
@@ -4141,7 +4201,7 @@
         "# 日本語でやってみたら、文字化けしてしまった\n",
         "!ghc -e 'let {nouns = [\"流れもの\",\"カエル\",\"坊主\"]; adjectives = [\"なまけものの\",\"文句たれの\",\"ずるい\"]} in [adjective ++ noun | adjective <- adjectives, noun <- nouns]'"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4165,7 +4225,7 @@
         "# 実験 putStrLn で取り出す\n",
         "!ghc -e 'let {nouns = [\"流れもの\",\"カエル\",\"坊主\"]; adjectives = [\"なまけものの\",\"文句たれの\",\"ずるい\"]} in mapM_ putStrLn [adjective ++ noun | adjective <- adjectives, noun <- nouns]'"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
