Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOpZhnw8TgoJo12IvfKVcNX",
+      "authorship_tag": "ABX9TyODkd61+Lux0VhlPNil4r7x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "%%capture\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3292,7 +3292,7 @@
         "        Just n  -> do putStr \"Errors per line: \"\n",
         "                      print n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3315,7 +3315,7 @@
       "source": [
         "!echo Don | runghc temp.hs"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3339,7 +3339,7 @@
       "source": [
         "!echo Bob | runghc temp.hs"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3368,7 +3368,7 @@
         "!ghc -e 'not False'\n",
         "!ghc -e 'not (True && True)'"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6655,6 +6655,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# EOF"
+      ],
+      "metadata": {
+        "id": "g3tyv0DTb7D1"
+      }
     }
   ]
 }
